# kinectGrabber

./: CMakeLists.txt  LICENSE  README.md
include/: KinectManager.h
src/: KinectManager.cpp  main.cpp
